[package]
name = "signing_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Wallet dependencies
# bdk = { version = "0.16.0", features = ["keys-bip39"] }
bdk = { git = "https://github.com/a5an0/bdk", features = ["keys-bip39"] }

# AWS dependencies
aws-config = "0.6.0"
aws-sdk-kms = "0.6.0"
aws-sdk-s3 = "0.6.0"
aws-sdk-dynamodb = "0.6.0"
tokio = { version = "1", features = ["full"] }
serde = "1"
log = "0.4.14"
tracing-subscriber = { version = "0.3.7", features = ["env-filter"] }
# NOTE: the following crate is not part of the SDK, but it is maintained by AWS.
lambda_runtime = "0.4.1"
# For the API GW types
lambda_http = "0.4.1"

# utility dependencies
# anyhow = "1.0.53"
regex = "1"
serde_json = "1.0.78"
